deploy/preview/infra/foundation/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: preview-default-policy
  namespace: safezone-preview
  annotations:
    argocd.argoproj.io/sync-wave: '1'
spec:
  podSelector: {} # 選取所有 Pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {} # 允許來自同 namespace 的流量
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: database
  egress:
  - {} # 暫時允許所有 Egress 以確保能連到外部 Kafka/DB (因為 Flannel 不執行限制，這裡主要作為文檔)
